--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,21 @@
 <h1>Eat! Da! Burger!!!</h1>
 
-<h2>Burgers that haven't been eaten!</h2>
+<h2>Burgers that haven't been devoured!</h2>
 
 <ul>
     {{#each burgers}}
-        {{#unless eaten}}
-            {{>burgers/burger-block eaten=true}}
+        {{#unless devoured}}
+            {{>burgers/burger-block devoured=true}}
         {{/unless}}
     {{/each}}
 </ul>
 
-<h2>Burgers that <em>have</em> been eaten!</h2>
+<h2>Burgers that <em>have</em> been devoured!</h2>
 
 <ul>
     {{#each burgers}}
-        {{#if eaten}}
-            {{>burgers/burger-block eaten=false}}
+        {{#if devoured}}
+            {{>burgers/burger-block devoured=false}}
         {{/if}}
     {{/each}}
 </ul>
@@ -29,9 +29,9 @@
   </div>
 
   <div class="form-group">
-    <label for="eaten">Eaten?</label><br>
-    <input type="radio" name="eaten" value="1" checked> Eaten!<br>
-    <input type="radio" name="eaten" value="0"> Not Eaten
+    <label for="devoured">Devoured?</label><br>
+    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+    <input type="radio" name="devoured" value="0"> Not Devoured
   </div>
 
   <button type="submit">Add Burger</button>
